# serial_micro_gui_rust

./: .project  Cargo.toml
src/: main.rs
src/gui/: mod.rs  pick_list_ex.rs
src/serial_talker/: mod.rs  serial_hardware_check.rs
src/state/: mod.rs
src/view/: main_window.rs  mod.rs  pane.rs  pick_list_ex.rs  tour.rs
