[package]
name = "Serial_Micro_Comms"
version = "0.1.0"
authors = ["Josh <augeas275@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial = "0.4.0"
#tokio-serial = "4.3.3-tokio-0.2.0-alpha.6"
"serialport" = "4.0.0"

iced = {version = "0.2", features = ["image", "debug"]}
env_logger = "0.8"
clap = "2.32"
